# simple_cmake_template

./: .clang-tidy  .clang_format  CMakeLists.txt  CMakePresets.json  CODING_CONVENTIONS.md  NOTICE.md  README.md  vcpkg.json
example/: CMakeLists.txt  example_main.cc
include/MyProject/: example.hpp
lib/: CMakeLists.txt
src/: CMakeLists.txt  example.cc
tests/: CMakeLists.txt  unit_test.cc
